[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support

# uncomment for hatchling
requires = ["hatchling"]
build-backend = "hatchling.build"

# uncomment for setuptools
# requires = ["setuptools>=43.0.0", "wheel"]
# build-backend = "setuptools.build_meta"


[project]
name = "vqgarm"
version = "0.0.1"
authors = [
  { name="LibreCS" },
]
description = "VQGAN+CLIP for arm64 benchmarking"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/LibreCS/vqgarm"
